--- a/03-media-query/3-sloupce.css
+++ b/03-media-query/3-sloupce.css
@@ -4,3 +4,21 @@ aby na obrazovce širší než 600px byly všechny 3 obdélníky vedle sebe.
 
 Go, girl!
 */
+.kontejner {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+}
+.sloupec {flex-basis: 32%}
+
+@media (min-width:600px) {
+    .kontejner {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 601px) {
+    .kontejner {flex-direction: row;}
+}
+
+
